--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+
+###> Marvel API Secret key
+MARVEL_SECRET_APIKEY="e5219ed4371c98d78b8cff1a824e9b4ad7e233b9"
