--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: 'fr'
+    marvel.secret.apikey: '%env(MARVEL_SECRET_APIKEY)%'
+    marvel.public.apikey: 'd770f0753d113e88753b1c41459235d9'
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +28,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\MarvelApi:
+        arguments:
+            $marvelSecretApikey : '%marvel.secret.apikey%'
+            $marvelPublicApikey : '%marvel.public.apikey%'
+
