--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.7.1",
         "@symfony/webpack-encore": "^0.22.0",
+        "barba.js": "^1.0.0",
         "bootstrap": "^4.2.1",
         "jquery": "^3.3.1",
         "node-sass": "^4.11.0",
